Index : Mejorados estilos de las casillas y su div padre para que se muestren correctamente
Código del Index :
En el método MapOnValidSubmit(), se ha actualizado también el array de casillas para la redimensión

--- a/Snake/Snake.csproj
+++ b/Snake/Snake.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Pages\Index.razor~RF2e71877b.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Data\" />
   </ItemGroup>
 
